<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/lab_actname"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@color/purple"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme">

        <TextView
            android:id="@+id/lab_actnameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textviewLab_act"
            android:textColor="@color/white"
            android:textSize="28sp" />

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_margin="20dp"
        android:layout_height="100dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/todoCelsius"
            android:width="30dp"
            app:srcCompat="@drawable/celsius" />


        <LinearLayout
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/todoArrowRight"
                android:width="100dp"
                app:srcCompat="@drawable/outline_arrow_right_alt_24" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/todoArrowLeft"
                android:width="100dp"
                app:srcCompat="@drawable/outline_arrow_left_alt_24" />

        </LinearLayout>

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/todoFahrenheit"
            android:width="30dp"
            app:srcCompat="@drawable/fahrenheit" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_margin="10dp"
        android:gravity="center"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/textviewFrom"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/editTextText"
            android:layout_width="261dp"
            android:layout_height="58dp"
            android:layout_marginStart="30dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/edittexttexthintsone"
            android:inputType="text" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_margin="10dp"
        android:gravity="center"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textviewTo"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/editTextText2"
            android:layout_width="253dp"
            android:layout_height="57dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="30dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/edittexttexthintstwo"
            android:inputType="text" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_margin="10dp"
        android:gravity="center"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/textviewValue"
            android:textSize="25sp"
            android:textColor="@color/green"/>

        <EditText
            android:id="@+id/editTextText3"
            android:layout_width="233dp"
            android:layout_height="60dp"
            android:layout_marginStart="30dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/edittexthintvalue"
            android:inputType="text" />


    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:text="@string/buttonText"
        android:onClick="onClick"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:text="@string/textviewresult" />


</androidx.appcompat.widget.LinearLayoutCompat>